frame/support/test/tests/construct_runtime_ui/invalid_module_entry.stderr
error: Only the following modules are allowed: `Module`, `Call`, `Storage`, `Event`, `Config`, `Origin`, `Inherent`, `ValidateUnsigned`, `Benchmarking`
  --> $DIR/invalid_module_entry.rs:10:23
   |
10 |         Balance: balances::{Error},
   |                             ^^^^^
